alignment fixes, testing image on events page, looking for fix on movile for vanta

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,8 +86,17 @@ h2 {
 }
 
 .events {
+    display: grid;
     background-color: rgb(240, 240, 240);
     padding: 100px;
+}
+
+.left-half {
+    grid-column: 1;
+}
+
+.right-half {
+    grid-column: 2;
 }
 
 #eventTag {
@@ -98,10 +107,29 @@ h2 {
     margin: auto;
 }
 
+#sampleAmai {
+    display: flex;
+    max-width: 300px;
+    max-height: 300px;
+}
+
 .followUs {
     text-align: center;
     justify-content: center;
     padding: 100px;
+}
+
+.icons {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5em;
+}
+
+.fa-brands {
+    color: #8c39cc
 }
 
 #vanta {
@@ -112,4 +140,90 @@ h2 {
     width: 100%;
     height: 55vh;
     transition: opacity 2s ease-in-out;
+}
+
+.text-box {
+    display: flex;
+    justify-content: center;
+}
+
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    border-radius: 100px;
+    transition: all .2s;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-white {
+    background-color: #fff;
+    color: #777;
+}
+
+.btn::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    z-index: -1;
+    transition: all .4s;
+}
+
+.btn-white::after {
+    background-color: #fff;
+}
+
+.btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
+.btn-animated {
+    animation: moveInBottom 5s ease-out;
+    animation-fill-mode: backwards;
+}
+
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+@media screen and (max-width: 670px) {
+    .events {
+        padding: 20px;
+    }
+
+    #eventTag {
+        max-width: 250px;
+        padding: 10px;
+        margin: auto;
+    }
+
+    #sampleAmai {
+        max-width: 200px;
+        min-width: 90px;
+        margin: auto;
+    }
+
+    .right-half {
+        margin-top: 100px;
+    }
 }
